test/Fail/Issue2081a.err
Issue2081a.agda:17.8-12: error: [NotInScope]
Not in scope:
  priv at Issue2081a.agda:17.8-12
    (did you mean 'priv0'?)
when scope checking priv
